--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^17.2.3",
     "ejs": "^4.0.1",
     "express": "^5.2.1",
-    "pg": "^8.18.0"
+    "pg": "^8.18.0",
+    "pg-format": "^1.0.4"
   },
   "name": "backend",
   "version": "1.0.0",
@@ -16,5 +17,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {},
   "description": ""
 }
